# go-teamcity

./: .gitignore  BUILD.bazel  WORKSPACE  repositories.bzl
teamcity/: BUILD.bazel  agent_requirement_test.go  artifact_dep_test.go  build_feature_test.go  build_type_step_test.go  build_type_test.go  context_test.go  dependency_test.go  feature_commit_publisher_test.go  parameter_test.go  project_test.go  property_assertions_test.go  snapshot_dep_test.go  status_publisher_github_options_test.go  step_octopus_create_release_test.go  teamcity_test.go  trigger_test.go  trigger_vcs_test.go  vcs_root_test.go
