load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "teamcity",
    srcs = [
        "agent_requirement.go",
        "artifact_dep.go",
        "artifact_dep_options.go",
        "build_feature.go",
        "build_template.go",
        "build_type.go",
        "build_type_options.go",
        "dependency.go",
        "dependency_type.go",
        "feature_commit_publisher.go",
        "generic_build_feature.go",
        "git_vcs_root.go",
        "git_vcs_root_options.go",
        "locator.go",
        "parameter.go",
        "project.go",
        "properties.go",
        "property_assertions.go",
        "response_decoder.go",
        "rest_helper.go",
        "server.go",
        "snapshot_dep.go",
        "status_publisher_github_options.go",
        "step.go",
        "step_command_line.go",
        "step_octopus_create_release.go",
        "step_octopus_push_package.go",
        "step_powershell.go",
        "teamcity.go",
        "trigger.go",
        "trigger_buildfinish.go",
        "trigger_buildfinish_options.go",
        "trigger_schedule.go",
        "trigger_schedule_options.go",
        "trigger_types.go",
        "trigger_vcs.go",
        "trigger_vcs_options.go",
        "util.go",
        "vcs_names.go",
        "vcs_root.go",
        "vcs_root_entry.go",
    ],
    importpath = "github.com/yext/go-teamcity/teamcity",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_dghubble_sling//:sling",
        "@com_github_motemen_go_loghttp//:go-loghttp",
        "@com_github_motemen_go_loghttp//global",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_test(
    name = "teamcity_test",
    srcs = [
        "agent_requirement_test.go",
        "artifact_dep_options_test.go",
        "artifact_dep_test.go",
        "build_feature_test.go",
        "build_template_test.go",
        "build_type_options_test.go",
        "build_type_step_test.go",
        "build_type_test.go",
        "context_test.go",
        "dependency_test.go",
        "feature_commit_publisher_test.go",
        "generic_build_feature_test.go",
        "git_vcs_root_options_test.go",
        "locator_test.go",
        "parameter_test.go",
        "project_test.go",
        "property_assertions_test.go",
        "server_test.go",
        "snapshot_dep_test.go",
        "status_publisher_github_options_test.go",
        "step_octopus_create_release_test.go",
        "teamcity_test.go",
        "trigger_buildfinish_options_test.go",
        "trigger_schedule_options_test.go",
        "trigger_schedule_test.go",
        "trigger_test.go",
        "trigger_vcs_options_test.go",
        "trigger_vcs_test.go",
        "vcs_root_test.go",
    ],
    embed = [":teamcity"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_stretchr_testify//suite",
    ],
)
